apps/templates/consul/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-ingress
  namespace: consul
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - consul.digitor.dk
    secretName: quickstart-example-tls
  rules:
    - host: consul.digitor.dk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: consul-consul-ui
              port:
                number: 443
